--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -9,7 +9,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:textSize="17sp"/>
 
     <ImageButton
         android:id="@+id/deleteButton"
